Changes in Version 1.3.6
  o Added functionality to draw pie graphs as node shape.
      o New arguments: 'pie', 'pieColor', 'pieColor2', and 'pieBorder'
      o Courtesy of Jonas Haslbeck
      o The label.cex argument can now be used in combination with label.scale = FALSE

Changes in Version 1.3.5
  o The label.cex argument now defaults to 1 if label.scale = FALSE
  o The label.scale.equal argument now can be set to TRUE to make all labels scale equally to the largest cex such that the longest label fits.
     o Can alternatively be a factor or numeric vector indicating which groups of nodes whould have the same label shape
  o Fixed a bug with betweenness computation using pkg = "igraph" argument in centrality()
  o The 'centralityPlot' and 'clusteringPlot' now use an argument 'scale' to set the scale of the x-axis, and print a message when this scale is z-scores or relative.
  o The 'shape' argument can now be used with subplots
  o getWmat now supports 'bootnetResult' objects
  o Fixed a bug with as.igraph not working if there is only 1 edge
  o Added 'smallWorldIndex' function to compute smallworldness of unweighted graph
  o Added arguments 'label.fill.vertical' and 'label.fill.horizontal' to 'qgraph'
  o Apparently  skipped over version 1.3.4

Changes in Version 1.3.3
  o The 'lambda.min.ratio' of 'EBICglasso' now defaults to 0.01 instead of 0.1, similar to earlier versions of qgraph. This will cause EBICglasso and qgraph(..., graph = "glasso") to potentially return less sparse models!
  o Added 'countDiagonal' argument to qgraph, EBICglasso and EBIC, so that behavior of older versions of qgraph can be mimicked.
  o Fixed a bug when computing average weights matrix with network that only has negative edges
  o Added 'means', 'SDs' and 'meanRange' arguments to qgraph(). These can be used to plot bars inside nodes indicating the means and variances of the nodes.